# wagtail-extended-search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  notes.md  pyproject.toml
.github/: CODEOWNERS
bakerydemo-overrides/: docker-compose.wes.yml  manage.py  settings.py  urls.py  views.py
bakerydemo-overrides/patching/: apps.py
bakerydemo-overrides/settings/: wes.py
wagtail_extended_search/: admin.py  apps.py  backends.py  index.py  query_builder.py  settings.py  signals.py
wagtail_extended_search/backends/: backend.py
wagtail_extended_search/base/backends/: backend.py
wagtail_extended_search/boost/backends/: backend.py
wagtail_extended_search/filtered/: query.py
wagtail_extended_search/filtered/backends/: backend.py
wagtail_extended_search/function_score/: query.py
wagtail_extended_search/function_score/backends/: backend.py
wagtail_extended_search/layers/function_score/: index.py
wagtail_extended_search/layers/indexed_fields/: index.py
wagtail_extended_search/layers/model_field_name/: index.py
wagtail_extended_search/layers/multi_query/: index.py
wagtail_extended_search/layers/one_to_many/: index.py
wagtail_extended_search/migrations/: 0002_alter_setting_options_alter_setting_key.py
wagtail_extended_search/only_fields/: query.py
wagtail_extended_search/tests/: test_backend.py  test_indexed.py  test_indexedfields.py  test_outcomes.py  test_query.py  test_querybuilder.py  test_scorefunction.py  test_searchfields.py  test_settings.py  test_types.py  testing_classes.py
(+16 files in other folders)
