[tool.poetry]
name = "wagtail-extended-search"
version = "0.1.0"
description = ""
authors = ["Cameron Lamb <jafacakes2011@hotmail.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
wagtail = "^6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
